rename page.css 6

--- a/contact-host.html
+++ b/contact-host.html
@@ -234,7 +234,7 @@
                                           >
                                             <a
                                               href="/rooms/16354372?check_in=&amp;check_out=&amp;adults=1&amp;children=0&amp;infants=0"
-                                              class="_itxk95j"
+                                              class="payout-methods__need-help-question"
                                               ><div
                                                 class="c1hs0xn0 dir dir-ltr"
                                               >
@@ -2589,7 +2589,7 @@
                                                           </div>
                                                         </div>
                                                       </div>
-                                                      <div class="_1vk19cb">
+                                                      <div class="payment-payout__notice-desc-text">
                                                         <div
                                                           class="dir dir-ltr"
                                                         >
@@ -2632,7 +2632,7 @@
                                                         </div>
                                                       </div>
                                                       <div
-                                                        class="_1vk19cb"
+                                                        class="payment-payout__notice-desc-text"
                                                       ></div>
                                                     </div>
                                                   </div>
