--- a/explore-when.html
+++ b/explore-when.html
@@ -261,7 +261,7 @@
                                                                   class="_1h0hirz"
                                                                 >
                                                                   <div
-                                                                    class="_1mfsr54"
+                                                                    class="payment-payout__switch-circle-wrapper"
                                                                   >
                                                                     <div
                                                                       class="_1y26gh8o"
@@ -2888,7 +2888,7 @@
                                                                                 </div>
                                                                               </div>
                                                                               <div
-                                                                                class="_gor68n"
+                                                                                class="payment-methods__method"
                                                                               >
                                                                                 <div
                                                                                   class="_1l06a80"
