--- a/help.html
+++ b/help.html
@@ -399,7 +399,7 @@
                                               href="/help/all-topics"
                                               class="_1mt76m69"
                                               ><span
-                                                class="atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"
+                                                class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"
                                                 ><span class="dir dir-ltr"
                                                   >Browse all topics</span
                                                 ><span
@@ -2481,7 +2481,7 @@
                                               href="/help/all-topics"
                                               class="_1mt76m69"
                                               ><span
-                                                class="atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"
+                                                class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"
                                                 ><span class="dir dir-ltr"
                                                   >Browse all topics</span
                                                 ><span
@@ -3537,7 +3537,7 @@
                                               href="/help/all-topics"
                                               class="_1mt76m69"
                                               ><span
-                                                class="atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"
+                                                class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"
                                                 ><span class="dir dir-ltr"
                                                   >Browse all topics</span
                                                 ><span
@@ -4591,7 +4591,7 @@
                                               href="/help/all-topics"
                                               class="_1mt76m69"
                                               ><span
-                                                class="atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"
+                                                class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"
                                                 ><span class="dir dir-ltr"
                                                   >Browse all topics</span
                                                 ><span
