--- a/login-security.html
+++ b/login-security.html
@@ -1319,7 +1319,7 @@
                                               <div class="inline-block">
                                                 <button
                                                   type="button"
-                                                  class="_bm3n7y3"
+                                                  class="payment-payout__guest-contribution-btn"
                                                   role="tab"
                                                   aria-selected="true"
                                                   aria-current="page"
@@ -1334,14 +1334,14 @@
                                         <div>
                                           <button
                                             type="button"
-                                            class="_deyl7aw"
+                                            class="payment-payout__tab-btn-overlay"
                                             aria-label="Previous"
                                             tabindex="-1"
                                             disabled=""
                                             aria-hidden="true"
                                           >
-                                            <div class="_d4ppnro">
-                                              <div class="_qplzdw">
+                                            <div class="payment-payout__tab-btn-icon-wrapper">
+                                              <div class="payment-payout__tab-btn-icon">
                                                 <svg
                                                   viewBox="0 0 18 18"
                                                   role="presentation"
@@ -1362,7 +1362,7 @@
                                               </div>
                                             </div>
                                             <div
-                                              class="_1qdcsp62"
+                                              class="payment-payout__tab-btn-spacer"
                                             ></div></button
                                           ><button
                                             type="button"
@@ -1374,7 +1374,7 @@
                                           >
                                             <div class="_m40p2y3"></div>
                                             <div class="_7b509an">
-                                              <div class="_qplzdw">
+                                              <div class="payment-payout__tab-btn-icon">
                                                 <svg
                                                   viewBox="0 0 18 18"
                                                   role="presentation"
