--- a/payments/payout-methods.html
+++ b/payments/payout-methods.html
@@ -275,8 +275,8 @@
                                   <div data-theme="" class="app-theme">
                                     <div>
                                       <div dir="ltr">
-                                        <div class="_dj903s">
-                                          <div class="_jtezirx">
+                                        <div class="payment-methods__contents">
+                                          <div class="payment-methods__contents-wrapper">
                                             <div style="margin-top: 32px">
                                               <div>
                                                 <div
@@ -378,14 +378,14 @@
                                                     </section>
                                                   </div>
                                                   <section>
-                                                    <h1 class="_1ulo7zo">
+                                                    <h1 class="payout-methods__header-h1">
                                                       How you’ll get paid
                                                     </h1>
                                                   </section>
                                                   <div
                                                     style="margin-bottom: 16px"
                                                   >
-                                                    <div class="_1qydy9m">
+                                                    <div class="payout-methods__header-desc">
                                                       Add at least one payout
                                                       method so we know where to
                                                       send your money.
@@ -406,9 +406,9 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="_1gjb1vzp">
-                                            <div class="_17fxqso">
-                                              <h2 class="_ok4lru">
+                                          <div class="payment-methods__notice-container">
+                                            <div class="payout-methods__need-help-wrapper">
+                                              <h2 class="payout-methods__need-help-text">
                                                 Need help?
                                               </h2>
                                               <div class="color_black">
@@ -420,7 +420,7 @@
                                                 >
                                                   <a
                                                     href="/help/article/425/when-youll-get-your-payout"
-                                                    class="_itxk95j"
+                                                    class="payout-methods__need-help-question"
                                                     ><div class="flex-content-between">
                                                       When you'll get your
                                                       payout<svg
@@ -457,7 +457,7 @@
                                                 >
                                                   <a
                                                     href="/help/topic/1454/how-payouts-work"
-                                                    class="_itxk95j"
+                                                    class="payout-methods__need-help-question"
                                                     ><div class="flex-content-between">
                                                       How payouts work<svg
                                                         viewBox="0 0 32 32"
@@ -493,7 +493,7 @@
                                                 >
                                                   <a
                                                     href="/users/transaction_history"
-                                                    class="_itxk95j"
+                                                    class="payout-methods__need-help-question"
                                                     ><div class="flex-content-between">
                                                       Go to your transaction
                                                       history<svg
@@ -847,8 +847,8 @@
                                 <div dir="ltr">
                                   <div data-theme="" class="app-theme">
                                     <div>
-                                      <div class="_dj903s">
-                                        <div class="_jtezirx">
+                                      <div class="payment-methods__contents">
+                                        <div class="payment-methods__contents-wrapper">
                                           <div style="margin-top: 32px">
                                             <div>
                                               <div
@@ -948,14 +948,14 @@
                                                   </section>
                                                 </div>
                                                 <section>
-                                                  <h1 class="_1ulo7zo">
+                                                  <h1 class="payout-methods__header-h1">
                                                     How you’ll get paid
                                                   </h1>
                                                 </section>
                                                 <div
                                                   style="margin-bottom: 16px"
                                                 >
-                                                  <div class="_1qydy9m">
+                                                  <div class="payout-methods__header-desc">
                                                     Add at least one payout
                                                     method so we know where to
                                                     send your money.
@@ -976,9 +976,9 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="_1gjb1vzp">
-                                          <div class="_17fxqso">
-                                            <h2 class="_ok4lru">Need help?</h2>
+                                        <div class="payment-methods__notice-container">
+                                          <div class="payout-methods__need-help-wrapper">
+                                            <h2 class="payout-methods__need-help-text">Need help?</h2>
                                             <div class="color_black">
                                               <div
                                                 style="
@@ -988,7 +988,7 @@
                                               >
                                                 <a
                                                   href="/help/article/425/when-youll-get-your-payout"
-                                                  class="_itxk95j"
+                                                  class="payout-methods__need-help-question"
                                                   ><div class="flex-content-between">
                                                     When you'll get your
                                                     payout<svg
@@ -1025,7 +1025,7 @@
                                               >
                                                 <a
                                                   href="/help/topic/1454/how-payouts-work"
-                                                  class="_itxk95j"
+                                                  class="payout-methods__need-help-question"
                                                   ><div class="flex-content-between">
                                                     How payouts work<svg
                                                       viewBox="0 0 32 32"
@@ -1061,7 +1061,7 @@
                                               >
                                                 <a
                                                   href="/users/transaction_history"
-                                                  class="_itxk95j"
+                                                  class="payout-methods__need-help-question"
                                                   ><div class="flex-content-between">
                                                     Go to your transaction
                                                     history<svg
