--- a/payments/your-payments.html
+++ b/payments/your-payments.html
@@ -1054,7 +1054,7 @@
                                                 </h2>
                                                 <a
                                                   href="/help/article/2143"
-                                                  class="_itxk95j"
+                                                  class="payout-methods__need-help-question"
                                                   ><div class="_1g82x4a">
                                                     <div class="_1dx9yw2">
                                                       How do payment plans work?
@@ -1083,7 +1083,7 @@
                                                     </svg></div></a
                                                 ><a
                                                   href="/help/article/245"
-                                                  class="_itxk95j"
+                                                  class="payout-methods__need-help-question"
                                                   ><div class="_1g82x4a">
                                                     <div class="_1dx9yw2">
                                                       How do I pay for my
@@ -1113,7 +1113,7 @@
                                                     </svg></div></a
                                                 ><a
                                                   href="/help/article/3159"
-                                                  class="_itxk95j"
+                                                  class="payout-methods__need-help-question"
                                                   ><div class="_1g82x4a">
                                                     <div class="_1dx9yw2">
                                                       Where can I find my
