--- a/preferences.html
+++ b/preferences.html
@@ -606,10 +606,10 @@
                                           name="Translation"
                                           value="true"
                                         />
-                                        <div class="_1nqg52lg"></div>
-                                        <div class="_v76fopi">
-                                          <div class="_1mfsr54">
-                                            <div class="_1m1auhrh"></div>
+                                        <div class="payment-payout__switch-overlay"></div>
+                                        <div class="payment-payout__switch-circle">
+                                          <div class="payment-payout__switch-circle-wrapper">
+                                            <div class="payment-payout__switch-circle-icon"></div>
                                             <svg
                                               viewBox="0 0 52 52"
                                               fill="currentColor"
@@ -633,8 +633,8 @@
                                               ></path>
                                             </svg>
                                           </div>
-                                          <div class="_1abyqs14">
-                                            <div class="_pna3r">
+                                          <div class="payment-payout__switch-circle-overlay">
+                                            <div class="payment-payout__switch-circle-icon-overlay">
                                               <svg
                                                 viewBox="0 0 52 52"
                                                 fill="currentColor"
@@ -693,7 +693,7 @@
                                         />
                                         <div class="_byj74f"></div>
                                         <div class="_nkz5o8">
-                                          <div class="_1mfsr54">
+                                          <div class="payment-payout__switch-circle-wrapper">
                                             <div class="_wd4c3r"></div>
                                             <svg
                                               viewBox="0 0 52 52"
