--- a/privacy-and-sharing.html
+++ b/privacy-and-sharing.html
@@ -541,7 +541,7 @@
                                                           search results.
                                                         </div>
                                                       </div>
-                                                      <div class="_1vk19cb">
+                                                      <div class="payment-payout__notice-desc-text">
                                                         <button
                                                           aria-checked="false"
                                                           aria-labelledby="includeInSearchEngines-switch-row-title"
@@ -624,7 +624,7 @@
                                                           </button>
                                                         </div>
                                                       </div>
-                                                      <div class="_1vk19cb">
+                                                      <div class="payment-payout__notice-desc-text">
                                                         <button
                                                           aria-checked="true"
                                                           aria-labelledby="useDataForInclusion-switch-row-title"
@@ -1203,7 +1203,7 @@
                                                   results.
                                                 </div>
                                               </div>
-                                              <div class="_1vk19cb">
+                                              <div class="payment-payout__notice-desc-text">
                                                 <button
                                                   aria-checked="false"
                                                   aria-labelledby="includeInSearchEngines-switch-row-title"
@@ -1281,7 +1281,7 @@
                                                   </button>
                                                 </div>
                                               </div>
-                                              <div class="_1vk19cb">
+                                              <div class="payment-payout__notice-desc-text">
                                                 <button
                                                   aria-checked="true"
                                                   aria-labelledby="useDataForInclusion-switch-row-title"
