--- a/products.html
+++ b/products.html
@@ -2961,14 +2961,14 @@
                                                       </div>
                                                     </div>
                                                   </div>
-                                                  <div class="_1vk19cb">
+                                                  <div class="payment-payout__notice-desc-text">
                                                     <button
                                                       data-testid="location-modal-button"
                                                       type="button"
                                                       class="tab__on-btn-container"
                                                     >
                                                       <span
-                                                        class="atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"
+                                                        class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"
                                                         ><span
                                                           class="dir dir-ltr"
                                                           >Show more</span
@@ -6014,7 +6014,7 @@
                                                                 class="tab__on-btn-container"
                                                               >
                                                                 <span
-                                                                  class="atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"
+                                                                  class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"
                                                                   ><span
                                                                     class="dir dir-ltr"
                                                                     >Show
@@ -6202,7 +6202,7 @@
                                                                 class="tab__on-btn-container"
                                                               >
                                                                 <span
-                                                                  class="atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"
+                                                                  class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"
                                                                   ><span
                                                                     class="dir dir-ltr"
                                                                     >Show
@@ -16992,7 +16992,7 @@
                                                         class="b1k5q1b3 v18vkvko dir dir-ltr"
                                                       >
                                                         <span
-                                                          class="atm_h_1h6ojuz flex atm_7l_12u4tyr atm_bx_1ltc5j7 atm_cs_qo5vgd atm_c8_fkimz8 atm_g3_11yl58k dir dir-ltr"
+                                                          class="f-items-center flex atm_7l_12u4tyr atm_bx_1ltc5j7 atm_cs_qo5vgd atm_c8_fkimz8 atm_g3_11yl58k dir dir-ltr"
                                                           ><span
                                                             class="atm_h0_exct8b dir dir-ltr"
                                                             ><svg
@@ -17687,7 +17687,7 @@
                                                         class="b1k5q1b3 v18vkvko dir dir-ltr"
                                                       >
                                                         <span
-                                                          class="atm_h_1h6ojuz flex atm_7l_12u4tyr atm_bx_1ltc5j7 atm_cs_qo5vgd atm_c8_fkimz8 atm_g3_11yl58k dir dir-ltr"
+                                                          class="f-items-center flex atm_7l_12u4tyr atm_bx_1ltc5j7 atm_cs_qo5vgd atm_c8_fkimz8 atm_g3_11yl58k dir dir-ltr"
                                                           ><span
                                                             class="atm_h0_exct8b dir dir-ltr"
                                                             ><svg
@@ -18304,7 +18304,7 @@
                                                         class="b1k5q1b3 v18vkvko dir dir-ltr"
                                                       >
                                                         <span
-                                                          class="atm_h_1h6ojuz flex atm_7l_12u4tyr atm_bx_1ltc5j7 atm_cs_qo5vgd atm_c8_fkimz8 atm_g3_11yl58k dir dir-ltr"
+                                                          class="f-items-center flex atm_7l_12u4tyr atm_bx_1ltc5j7 atm_cs_qo5vgd atm_c8_fkimz8 atm_g3_11yl58k dir dir-ltr"
                                                           ><span
                                                             class="atm_h0_exct8b dir dir-ltr"
                                                             ><svg
@@ -18908,7 +18908,7 @@
                                                               class="tab__on-btn-container"
                                                             >
                                                               <span
-                                                                class="atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"
+                                                                class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"
                                                                 ><span
                                                                   class="dir dir-ltr"
                                                                   >Show
@@ -19094,7 +19094,7 @@
                                                               class="tab__on-btn-container"
                                                             >
                                                               <span
-                                                                class="atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"
+                                                                class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"
                                                                 ><span
                                                                   class="dir dir-ltr"
                                                                   >Show
@@ -19278,7 +19278,7 @@
                                                               class="tab__on-btn-container"
                                                             >
                                                               <span
-                                                                class="atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"
+                                                                class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"
                                                                 ><span
                                                                   class="dir dir-ltr"
                                                                   >Show
@@ -19478,7 +19478,7 @@
                                                               class="tab__on-btn-container"
                                                             >
                                                               <span
-                                                                class="atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"
+                                                                class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"
                                                                 ><span
                                                                   class="dir dir-ltr"
                                                                   >Show
@@ -19756,14 +19756,14 @@
                                                     </div>
                                                   </div>
                                                 </div>
-                                                <div class="_1vk19cb">
+                                                <div class="payment-payout__notice-desc-text">
                                                   <button
                                                     data-testid="location-modal-button"
                                                     type="button"
                                                     class="tab__on-btn-container"
                                                   >
                                                     <span
-                                                      class="atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"
+                                                      class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"
                                                       ><span class="dir dir-ltr"
                                                         >Show more</span
                                                       ><span
@@ -20675,7 +20675,7 @@
                                                             class="tab__on-btn-container"
                                                           >
                                                             <span
-                                                              class="atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"
+                                                              class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"
                                                               ><span
                                                                 class="dir dir-ltr"
                                                                 >Show more</span
