--- a/profile.html
+++ b/profile.html
@@ -381,7 +381,7 @@
                                 id="FMP-target"
                               >
                                 <div
-                                  class="_dj903s"
+                                  class="payment-methods__contents"
                                   data-testid="user-profile-content"
                                 >
                                   <div class="_1h9muyam">
@@ -502,7 +502,7 @@
                                             </h1>
                                           </div>
                                           <div class="page-shell-mobile__mb-16">
-                                            <div class="_dj903s">
+                                            <div class="payment-methods__contents">
                                               <div class="_l0bkzy6">
                                                 <div class="_1ahen39n">
                                                   <span class="_1lz166q"
@@ -1042,7 +1042,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                 </h2>
                                               </div>
                                               <div class="page-shell-mobile__mb-16">
-                                                <div class="_dj903s">
+                                                <div class="payment-methods__contents">
                                                   <div class="_l0bkzy6">
                                                     <div class="_1ahen39n">
                                                       <span class="_1lz166q"
@@ -1475,7 +1475,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                           id="FMP-target"
                         >
                           <div
-                            class="_dj903s"
+                            class="payment-methods__contents"
                             data-testid="user-profile-content"
                           >
                             <div class="_1h9muyam">
@@ -1602,7 +1602,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                       </h1>
                                     </div>
                                     <div class="page-shell-mobile__mb-16">
-                                      <div class="_dj903s">
+                                      <div class="payment-methods__contents">
                                         <div class="_l0bkzy6">
                                           <div class="_1ahen39n">
                                             <span class="_1lz166q"
@@ -2125,7 +2125,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                           </h2>
                                         </div>
                                         <div class="page-shell-mobile__mb-16">
-                                          <div class="_dj903s">
+                                          <div class="payment-methods__contents">
                                             <div class="_l0bkzy6">
                                               <div class="_1ahen39n">
                                                 <span class="_1lz166q"
