--- a/reviews.html
+++ b/reviews.html
@@ -1349,7 +1349,7 @@
                     <div class="account-container__menu-container">
                       <div class="_153csg0n">
                         <div class="_fgc192">
-                          <div class="_dj903s">
+                          <div class="payment-methods__contents">
                             <div class="_zmebr8n">
                               <div class="_1g0w9mx">
                                 <div class="_13ea8wp hidden">
