--- a/submission/GeneralV.html
+++ b/submission/GeneralV.html
@@ -1188,7 +1188,7 @@
                                         value="1"
                                         checked=""
                                       /><span class="_dclc1y"
-                                        ><div class="_abrv9k">
+                                        ><div class="payment-payout__notice-desc">
                                           Weekdays
                                         </div></span
                                       ></label
@@ -1207,7 +1207,7 @@
                                         data-veloute="info_available_date_to_host-2"
                                         value="2"
                                       /><span class="_dclc1y"
-                                        ><div class="_abrv9k">
+                                        ><div class="payment-payout__notice-desc">
                                           Weekends
                                         </div></span
                                       ></label
@@ -1226,7 +1226,7 @@
                                         data-veloute="info_available_date_to_host-3"
                                         value="3"
                                       /><span class="_dclc1y"
-                                        ><div class="_abrv9k">
+                                        ><div class="payment-payout__notice-desc">
                                           Both weekdays and weekends
                                         </div></span
                                       ></label
@@ -1245,7 +1245,7 @@
                                         data-veloute="info_available_date_to_host-0"
                                         value="0"
                                       /><span class="_dclc1y"
-                                        ><div class="_abrv9k">
+                                        ><div class="payment-payout__notice-desc">
                                           I don’t know yet
                                         </div></span
                                       ></label
