--- a/submission/GuestP.html
+++ b/submission/GuestP.html
@@ -1363,7 +1363,7 @@
                                     can change this for specific instances.
                                   </div>
                                 </div>
-                                <div class="_1vk19cb">
+                                <div class="payment-payout__notice-desc-text">
                                   <button
                                     aria-checked="false"
                                     aria-labelledby="default-private-row-title"
@@ -1416,7 +1416,7 @@
                                     </button>
                                   </div>
                                 </div>
-                                <div class="_1vk19cb">
+                                <div class="payment-payout__notice-desc-text">
                                   <button
                                     aria-checked="false"
                                     aria-labelledby="caregiver-free-row-title"
