--- a/submission/about.html
+++ b/submission/about.html
@@ -1083,7 +1083,7 @@
                                           value="0"
                                           checked=""
                                         /><span class="_dclc1y"
-                                          ><div class="_abrv9k">
+                                          ><div class="payment-payout__notice-desc">
                                             I’m hosting by myself
                                           </div></span
                                         ></label
@@ -1102,7 +1102,7 @@
                                           data-veloute="info_best_describe_you_and_experience-1"
                                           value="1"
                                         /><span class="_dclc1y"
-                                          ><div class="_abrv9k">
+                                          ><div class="payment-payout__notice-desc">
                                             I have a team who helps me host
                                           </div></span
                                         ></label
