--- a/submission/etd.html
+++ b/submission/etd.html
@@ -1137,7 +1137,7 @@
                                           value="0"
                                           checked=""
                                         /><span class="_dclc1y"
-                                          ><div class="_abrv9k">Yes</div></span
+                                          ><div class="payment-payout__notice-desc">Yes</div></span
                                         ></label
                                       >
                                     </div>
@@ -1154,7 +1154,7 @@
                                           data-veloute="info_score_educate_about_animals-1"
                                           value="1"
                                         /><span class="_dclc1y"
-                                          ><div class="_abrv9k">No</div></span
+                                          ><div class="payment-payout__notice-desc">No</div></span
                                         ></label
                                       >
                                     </div>
