--- a/submission/expertise.html
+++ b/submission/expertise.html
@@ -1133,7 +1133,7 @@
                                           value="0"
                                           checked=""
                                         /><span class="_dclc1y"
-                                          ><div class="_abrv9k">
+                                          ><div class="payment-payout__notice-desc">
                                             Yes, I’ve hosted or taught this
                                             activity professionally
                                           </div></span
@@ -1153,7 +1153,7 @@
                                           data-veloute="info_previously_hosted_activity-1"
                                           value="1"
                                         /><span class="_dclc1y"
-                                          ><div class="_abrv9k">
+                                          ><div class="payment-payout__notice-desc">
                                             Yes, I’ve hosted this activity
                                             informally for friends or family
                                           </div></span
@@ -1173,7 +1173,7 @@
                                           data-veloute="info_previously_hosted_activity-2"
                                           value="2"
                                         /><span class="_dclc1y"
-                                          ><div class="_abrv9k">
+                                          ><div class="payment-payout__notice-desc">
                                             No, I’ve never hosted this activity
                                             before
                                           </div></span
