--- a/payments/tax-info.html
+++ b/payments/tax-info.html
@@ -273,11 +273,11 @@
                                 <div dir="ltr">
                                   <div data-theme="" class="app-theme">
                                     <div>
-                                      <div class="_dj903s">
-                                        <div class="_jtezirx">
+                                      <div class="payment-methods__contents">
+                                        <div class="payment-methods__contents-wrapper">
                                           <div style="margin-top: 48px"></div>
                                           <div style="margin-top: 24px"></div>
-                                          <div class="_dj903s">
+                                          <div class="payment-methods__contents">
                                             <div class="_1787zsai">
                                               <div
                                                 style="
@@ -288,7 +288,7 @@
                                                 <div class="_7qp4lh"></div>
                                               </div>
                                               <section>
-                                                <div class="_4uhhnx">
+                                                <div class="tax-info__header-h1">
                                                   <h1
                                                     tabindex="-1"
                                                     class="heading"
@@ -298,7 +298,7 @@
                                                   </h1>
                                                 </div>
                                               </section>
-                                              <div class="_1lcxkbl">
+                                              <div class="tax-info__header-desc">
                                                 If you are registered for VAT or
                                                 your stay is for business, you
                                                 may not be charged VAT on Airbnb
@@ -332,8 +332,8 @@
                                           </div>
                                           <div></div>
                                         </div>
-                                        <div class="_1gjb1vzp">
-                                          <div class="_1j8lpo3">
+                                        <div class="payment-methods__notice-container">
+                                          <div class="payment-methods__notice-wrapper">
                                             <section>
                                               <svg
                                                 viewBox="0 0 48 48"
@@ -359,7 +359,7 @@
                                                   ></path>
                                                 </g>
                                               </svg>
-                                              <div class="_1dm60y4">
+                                              <div class="payment-methods__notice-card-header">
                                                 <h1
                                                   tabindex="-1"
                                                   class="heading"
@@ -368,7 +368,7 @@
                                                   Where is my VAT invoice?
                                                 </h1>
                                               </div>
-                                              <div class="_7a96q1">
+                                              <div class="payment-methods__notice-card-desc">
                                                 Once you book a place for
                                                 business travel, you can find a
                                                 link to the VAT invoice in the
@@ -704,11 +704,11 @@
                                 <div dir="ltr">
                                   <div data-theme="" class="app-theme">
                                     <div>
-                                      <div class="_dj903s">
-                                        <div class="_jtezirx">
+                                      <div class="payment-methods__contents">
+                                        <div class="payment-methods__contents-wrapper">
                                           <div style="margin-top: 48px"></div>
                                           <div style="margin-top: 24px"></div>
-                                          <div class="_dj903s">
+                                          <div class="payment-methods__contents">
                                             <div class="_1787zsai">
                                               <div
                                                 style="
@@ -719,7 +719,7 @@
                                                 <div class="_7qp4lh"></div>
                                               </div>
                                               <section>
-                                                <div class="_4uhhnx">
+                                                <div class="tax-info__header-h1">
                                                   <h2
                                                     tabindex="-1"
                                                     class="heading"
@@ -729,7 +729,7 @@
                                                   </h2>
                                                 </div>
                                               </section>
-                                              <div class="_1lcxkbl">
+                                              <div class="tax-info__header-desc">
                                                 If you are registered for VAT or
                                                 your stay is for business, you
                                                 may not be charged VAT on Airbnb
@@ -763,8 +763,8 @@
                                           </div>
                                           <div></div>
                                         </div>
-                                        <div class="_1gjb1vzp">
-                                          <div class="_1j8lpo3">
+                                        <div class="payment-methods__notice-container">
+                                          <div class="payment-methods__notice-wrapper">
                                             <section>
                                               <svg
                                                 viewBox="0 0 48 48"
@@ -790,7 +790,7 @@
                                                   ></path>
                                                 </g>
                                               </svg>
-                                              <div class="_1dm60y4">
+                                              <div class="payment-methods__notice-card-header">
                                                 <h2
                                                   tabindex="-1"
                                                   class="heading"
@@ -799,7 +799,7 @@
                                                   Where is my VAT invoice?
                                                 </h2>
                                               </div>
-                                              <div class="_7a96q1">
+                                              <div class="payment-methods__notice-card-desc">
                                                 Once you book a place for
                                                 business travel, you can find a
                                                 link to the VAT invoice in the
