--- a/professional-hosting.html
+++ b/professional-hosting.html
@@ -297,7 +297,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_ttfedy0">
+                                <div class="payment-payout__progress-wrapper">
                                   <div class="footer__progress-active-wrapper">
                                     <div class="footer__progress-active-content">
                                       <div style="margin-right: 24px">
@@ -372,7 +372,7 @@
                                         />
                                         <div class="_byj74f"></div>
                                         <div class="_nkz5o8">
-                                          <div class="_1mfsr54">
+                                          <div class="payment-payout__switch-circle-wrapper">
                                             <div class="_wd4c3r"></div>
                                             <svg
                                               viewBox="0 0 52 52"
@@ -697,7 +697,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <div class="_ttfedy0">
+                                    <div class="payment-payout__progress-wrapper">
                                       <div class="footer__progress-active-wrapper">
                                         <div class="footer__progress-active-content">
                                           <div style="margin-right: 24px">
@@ -775,7 +775,7 @@
                                             />
                                             <div class="_byj74f"></div>
                                             <div class="_nkz5o8">
-                                              <div class="_1mfsr54">
+                                              <div class="payment-payout__switch-circle-wrapper">
                                                 <div class="_wd4c3r"></div>
                                                 <svg
                                                   viewBox="0 0 52 52"
@@ -842,10 +842,10 @@
                                               name="email removal whitelist switch"
                                               value="true"
                                             />
-                                            <div class="_1nqg52lg"></div>
-                                            <div class="_v76fopi">
-                                              <div class="_1mfsr54">
-                                                <div class="_1m1auhrh"></div>
+                                            <div class="payment-payout__switch-overlay"></div>
+                                            <div class="payment-payout__switch-circle">
+                                              <div class="payment-payout__switch-circle-wrapper">
+                                                <div class="payment-payout__switch-circle-icon"></div>
                                                 <svg
                                                   viewBox="0 0 52 52"
                                                   fill="currentColor"
@@ -869,8 +869,8 @@
                                                   ></path>
                                                 </svg>
                                               </div>
-                                              <div class="_1abyqs14">
-                                                <div class="_pna3r">
+                                              <div class="payment-payout__switch-circle-overlay">
+                                                <div class="payment-payout__switch-circle-icon-overlay">
                                                   <svg
                                                     viewBox="0 0 52 52"
                                                     fill="currentColor"
