--- a/signup_login.html
+++ b/signup_login.html
@@ -201,7 +201,7 @@
                                       name="authenticity_token"
                                       value="V4$.airbnb.com$ugfPqnTtcxg$82jSpZccUt69r0lcWKKFI_s5sIxRRGKe9WxEcvFYUb4="
                                     />
-                                    <div class="_1vk19cb">
+                                    <div class="payment-payout__notice-desc-text">
                                       <div class="mb-6">
                                         <section role="status" class="e1rue1xl i144hzgs dir dir-ltr">
                                           <div class="ccmqn89 dir dir-ltr">
@@ -3166,7 +3166,7 @@
                                               data-checkbox="true"
                                             ></span></span
                                           ><span
-                                            class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y atm_7l_18pqv07 atm_h3_yh40bf atm_gz_exct8b dir dir-ltr"
+                                            class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y text-black atm_h3_yh40bf atm_gz_exct8b dir dir-ltr"
                                           >
                                             <div class="_fbbx3d">
                                               I don’t want to receive marketing
@@ -3214,7 +3214,7 @@
                                                     d="m4 16.5 8 8 16-16"
                                                   ></path></svg></span></span></span
                                           ><span
-                                            class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y atm_7l_18pqv07 atm_h3_yh40bf atm_gz_exct8b dir dir-ltr"
+                                            class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y text-black atm_h3_yh40bf atm_gz_exct8b dir dir-ltr"
                                           >
                                             <div class="_fbbx3d">
                                               I don’t want to receive marketing
@@ -3458,7 +3458,7 @@
                                     name="authenticity_token"
                                     value="V4$.airbnb.com$gdP3em0LrCE$ovR3jip7DgQok-zydNr4HurdV6lt7gvlzQw_6ESPnWg="
                                   />
-                                  <div class="_1vk19cb">
+                                  <div class="payment-payout__notice-desc-text">
                                     <div class="mb-6">
                                       <section role="status" class="e1rue1xl i144hzgs dir dir-ltr">
                                         <div class="ccmqn89 dir dir-ltr">
@@ -6536,7 +6536,7 @@
                                             data-checkbox="true"
                                           ></span></span
                                         ><span
-                                          class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y atm_7l_18pqv07 atm_h3_yh40bf atm_gz_exct8b dir dir-ltr"
+                                          class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y text-black atm_h3_yh40bf atm_gz_exct8b dir dir-ltr"
                                         >
                                           <div class="_fbbx3d">
                                             I don’t want to receive marketing
@@ -6584,7 +6584,7 @@
                                                   d="m4 16.5 8 8 16-16"
                                                 ></path></svg></span></span></span
                                         ><span
-                                          class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y atm_7l_18pqv07 atm_h3_yh40bf atm_gz_exct8b dir dir-ltr"
+                                          class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y text-black atm_h3_yh40bf atm_gz_exct8b dir dir-ltr"
                                         >
                                           <div class="_fbbx3d">
                                             I don’t want to receive marketing
