--- a/submission/photo.html
+++ b/submission/photo.html
@@ -1756,7 +1756,7 @@
                                     href="/resources/hosting-experiences/a/photo-requirements-for-experiences-386"
                                     class="explore-click"
                                     ><span
-                                      class="atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"
+                                      class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"
                                       ><span class="dir dir-ltr"
                                         >Learn more about photo
                                         requirements</span
